# mpc_for_single_leg

./: CMakeLists.txt  RF_HFE_joint_data.csv  RF_KFE_joint_data.csv  main.cpp  mpc_data.csv  package.xml
config/: config.json  cost.info  legcost.info  polarity.json  zero_pos.json
config/io/: 0x1607.json  0x1608.json  0x1a07.json  io.json
include/: SingleLegTerm.h  configDir.h  configDir.h.in  dynamics.h  io.h  joint.h  motor.h  my_type.h  transform.h
python/: plot
src/: elmo.cpp  initial.cpp  io.cpp  joint.cpp  motor.cpp  mpc_test.cpp  set_zero.cpp  single_leg.cpp  transform.cpp
